Revision history for {{$dist->name}}

{{$NEXT}}

0.37      2017-07-23 17:12:25 -0400
  - Require Clustericious 1.24 for recent Mojolicious compat

0.36      2017-07-22 21:59:57 -0400
  - Remove dependency on File::HomeDir

0.35      2016-11-28 14:31:26 -0500
  - Remove dependency on Log::Log4perl::CommandLine

0.34      2016-07-20 14:51:49 -0400
  - Mojo 7.x compatability

0.33      2015-12-07 19:54:31 -0500
  - Removed deprecated items in preperation for
    release of Clustericious 1.11.
  - Fixed test broken with current Clustericious dev
    (expected to be included with Clustericious 1.11)

0.32      2015-11-30 15:32:53 -0500
  - Remove deprecated use of JSON configuration files
    from test suite.
  - Remove dependency on Test::Differences
  - Migrate from Mojo::JSON to JSON::MaybeXS
  - Moved repository to clustericious org on github
    (updated meta appropriately)

0.31      2015-11-11 13:21:03 -0500
  - Silence warnings coming from FlatAuth
  - Fix bug where DisableGroup plugin would return 500
    error if the user was invalid

0.30      2015-03-13 03:53:43 -0400
  - Mojolicious 6.x compatability

0.29      2015-01-29 13:04:44 -0500
  - Recent Mojo compat test fix

0.28      2014-12-19 11:38:00 -0500
  - Merge PlugAuth::Plugin::Audit into this distro.
  - Merge PlugAuth::Client distro into this distro.

0.27      2014-12-09 10:24:00 America/New_York
  - use functional Mojo::JSON API
    the OO version was deprecated

0.26      2014-04-09 12:28:19 America/New_York
  - remove harness detection from test code

0.25      2014-02-24 10:29:37 America/New_York
  - alter logging, make authentication INFO
    instead of DEBUG

0.24      2014-01-22 17:57:53 America/New_York
  - Mojo 4.50 compat

0.23      2013-08-06 08:42:11 America/New_York
  - promote to production

0.22_01   2013-07-21 18:25:29 America/New_York
  - better diagnostics in new tests

0.22      2013-07-19 22:55:33 America/New_York
  - require Test::Clustericious::Cluster 0.08 for MSWin32 fixes
