@@ -18,6 +18,7 @@ appveyor      = e2u2vl3fqw76tgyf
 Clustericious            = 1.24
 Class::Method::Modifiers = 0
 Path::Class              = 0
+List::Util               = 1.45
 
 [Prereqs / TestPrereqs]
 -phase = test
